--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+body {
+	background: black;
 }
+
+h1 {
+	color: #369;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 250%;
+}
+
+/*# sourceMappingURL=src/sass/maps/styles.css.map */
