added petition background component. Also added css styles to page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Petition Form Creator</h1>
-<form-creator-component></form-creator-component>
+<petition-background></petition-background>
+<section class="l-app-form">
+    <h1 class="form-header">Petition Form Creator</h1>
+    <form-creator-component></form-creator-component>
+</section>
