--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,10 +1,8 @@
-body{
-    background:black;
-}
 
 
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
+
+@import "normalize";
+@import "base";
+@import "layout";
+@import "modules";
+
