--- a/src/app/components/petitionformcreator/petitionform.html
+++ b/src/app/components/petitionformcreator/petitionform.html
@@ -1,7 +1,12 @@
-<form class="petition-form" action="">
-    First Name: <input type="text" name="first_name"><br>
-    Last Name: <input type="text" name="last_name"><br>
-    Petition Title: <input type="text" name="petition_title"><br>
-    <textarea name="petition_body" id="petition_body" cols="30" rows="10"></textarea><br>
-    <input type="submit" value="Create">
-</form>
+<div class="petition-form-container">
+    <h1 class="form-header">Petition Form Creator</h1>
+    <form class="petition-form" action="">
+        <fieldset class="petition-form__set">
+            <input class="petition-form__ipt" type="text" name="first_name" placeholder="First Name"><br>
+            <input class="petition-form__ipt" type="text" name="last_name" placeholder="Last Name"><br>
+            <input class="petition-form__ipt" type="text" name="petition_title" placeholder="Petition Title"><br>
+            <textarea class="petition-form__ipt" name="petition_body" id="petition_body" cols="30" rows="5"></textarea><br>
+        </fieldset>
+        <input class="petition-form__btn" type="submit" value="Create">
+    </form>
+</div>
