--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,8 +4,9 @@ html, body{
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  font-size: $base-font-size;
   color:black;
-  background:#41413E;
+  background: $app-background;
 }
 
 *, *:before, *:after{
@@ -13,7 +14,7 @@ html, body{
 }
 
 h1 {
-  color: #369;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
