--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -15,7 +15,8 @@
         bottom:0;
         width: inherit;
         height: inherit;
-        background-color:rgba(9,9,9,0.7);
+        //background-color:rgba(9,9,9,0.6);
+        //background-color:rgba(225,225,225,0.3);
     }
 }
 
