--- a/src/sass/_modules.scss
+++ b/src/sass/_modules.scss
@@ -6,27 +6,67 @@
     padding-left: 5px;
     &__text{
         margin: 0px;
-        color: orange;
+        font-size: em(18px);
+        color: $background-name-color;
+        text-shadow: 0 0 10px black;
         font-weight: bolder;
     }
 }
-
+r
 .form-header{
     position: fixed;
     right: 0;
     left: 0;
     margin-top: 150px;
-    margin-right: auto;
-    margin-left: auto;
+    @include center;
 }
 
-.petition-form{
+.petition-form-container{
     position: fixed;
     right: 0;
     left: 0;
-    margin-top: 200px;
-    margin-right: auto;
-    margin-left: auto;
-    width: 350px;
-    background:gray;
+    margin-top: 100px;
+    @include center;
+    padding: 20px 20px;
+    width: 40%;
+    background:$form-container;
+    border-radius: 5px;
+}
+.petition-form{
+    @include center;
+    width: 60%;
+    background: #ffffff;
+    border-radius: 2px;
+    overflow:hidden;
+    &__set{
+        @include center;
+        padding: 15px 20px 20px 20px;
+        width: 80%;
+        border:none;
+    }
+    &__ipt{
+        margin-bottom: 10px;
+        padding: 15px 10px;
+        width: 100%;
+        color: #ccc;
+        border: 1px solid #ddd;
+        border-radius: 2px;
+    }
+    &__btn{
+        padding: 20px 10px;
+        max-height: 70px;
+        width: 100%;
+        height: 100%;
+        font-size: em(20px);
+        font-weight: bolder;
+        color: #fff;
+        border: 0px solid rgba(0,0,0,0.1);
+        border-radius: 0 0 2px 2px;
+        border-bottom-width: 7px;
+        background: $form-btn;
+        transition: all .5s ease-out;
+        &:hover{
+            background: $form-btn-hover;
+        }
+    }
 }
