addedin header and more page styles. Also adding routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<petition-background></petition-background>
-<section class="l-app-form">
-    <form-creator-component></form-creator-component>
-</section>
+<navi></navi>
+<router-outlet></router-outlet>    
