--- a/src/app/components/petitionformcreator/petitionform.html
+++ b/src/app/components/petitionformcreator/petitionform.html
@@ -1,12 +1,18 @@
-<div class="petition-form-container">
-    <h1 class="form-header">Petition Form Creator</h1>
-    <form class="petition-form" action="">
-        <fieldset class="petition-form__set">
-            <input class="petition-form__ipt" type="text" name="first_name" placeholder="First Name"><br>
-            <input class="petition-form__ipt" type="text" name="last_name" placeholder="Last Name"><br>
-            <input class="petition-form__ipt" type="text" name="petition_title" placeholder="Petition Title"><br>
-            <textarea class="petition-form__ipt" name="petition_body" id="petition_body" cols="30" rows="5"></textarea><br>
-        </fieldset>
-        <input class="petition-form__btn" type="submit" value="Create">
-    </form>
-</div>
+<petition-background></petition-background>
+
+<section class="l-app-form">
+
+    <div class="petition-form-container">
+        <h1 class="form-header">Petition Form Creator</h1>
+        <form class="petition-form" action="">
+            <fieldset class="petition-form__set">
+                <input class="petition-form__ipt" type="text" name="first_name" placeholder="First Name"><br>
+                <input class="petition-form__ipt" type="text" name="last_name" placeholder="Last Name"><br>
+                <input class="petition-form__ipt" type="text" name="petition_title" placeholder="Petition Title"><br>
+                <textarea class="petition-form__ipt" name="petition_body" id="petition_body" cols="30" rows="5"></textarea><br>
+            </fieldset>
+            <input class="petition-form__btn" type="submit" value="Create">
+        </form>
+    </div>
+
+</section>
