--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,6 +5,7 @@ html, body{
   height: 100%;
   box-sizing: border-box;
   font-size: $base-font-size;
+  font-family: $font-body;
   color:black;
   background: $app-background;
 }
@@ -17,4 +18,28 @@ h1 {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+}
+
+h1, h2, h3, h4 {
+  font-family: $font-body;
+}
+
+a{
+  text-decoration: none;
+  &:link {
+    text-decoration: none;
+  }
+  &:visited {
+    text-decoration: none;
+  }
+  &:hover {
+    color:white;
+  }
+  &:active {
+    text-decoration: none;
+  }
+}
+
+li{
+  list-style-type: none;
 }
