--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,3 +1,14 @@
+.l-app-header{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 60px;
+    background: $header-background;
+    z-index: 998;
+    box-shadow: 0px 0px 10px black;
+}
+
 
 .l-app-background{
     position: absolute;
@@ -6,6 +17,7 @@
     display: flex; 
     flex-wrap: wrap;
     align-content: flex-start;
+    padding-top: 80px;
     width: 100%;
     height: 200%;
     &:after{
@@ -15,7 +27,7 @@
         bottom:0;
         width: inherit;
         height: inherit;
-        //background-color:rgba(9,9,9,0.6);
+        background-color:rgba(9,9,9,0.4);
         //background-color:rgba(225,225,225,0.3);
     }
 }
