--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto:400,700");
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -415,6 +416,7 @@ html, body {
 	height: 100%;
 	box-sizing: border-box;
 	font-size: 16px;
+	font-family: "Raleway", sans-serif;
 	color: black;
 	background: linear-gradient(to left, #5F9EA0, #90EE90);
 }
@@ -429,6 +431,45 @@ h1 {
 	font-size: 250%;
 }
 
+h1, h2, h3, h4 {
+	font-family: "Raleway", sans-serif;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:link {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	color: white;
+}
+
+a:active {
+	text-decoration: none;
+}
+
+li {
+	list-style-type: none;
+}
+
+.l-app-header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 60px;
+	background: white;
+	z-index: 998;
+	box-shadow: 0px 0px 10px black;
+}
+
 .l-app-background {
 	position: absolute;
 	top: 0;
@@ -440,6 +481,7 @@ h1 {
 	    flex-wrap: wrap;
 	-ms-flex-line-pack: start;
 	    align-content: flex-start;
+	padding-top: 80px;
 	width: 100%;
 	height: 200%;
 }
@@ -451,6 +493,7 @@ h1 {
 	bottom: 0;
 	width: inherit;
 	height: inherit;
+	background-color: rgba(9, 9, 9, 0.4);
 }
 
 .l-app-form {
@@ -460,6 +503,50 @@ h1 {
 	width: 100%;
 	text-align: center;
 	z-index: 999;
+}
+
+.navi {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 80%;
+	height: inherit;
+}
+
+.navi h1 {
+	margin-top: 0px;
+	color: #015249;
+	line-height: 60px;
+}
+
+.menu {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	margin-top: 0;
+	width: 300px;
+	height: inherit;
+	background: white;
+}
+
+.menu__item {
+	padding-right: 20px;
+	font-weight: bolder;
+	line-height: 60px;
+}
+
+.menu__item a {
+	color: #a5a5af;
+}
+
+.menu__item a:hover {
+	color: #696969;
 }
 
 .petition-name {
@@ -490,12 +577,12 @@ r
 	position: fixed;
 	right: 0;
 	left: 0;
-	margin-top: 100px;
+	margin-top: 130px;
 	margin-right: auto;
 	margin-left: auto;
 	padding: 20px 20px;
-	width: 40%;
-	background: rgba(9, 9, 9, 0.4);
+	width: 35%;
+	background: rgba(9, 9, 9, 0.3);
 	border-radius: 5px;
 }
 
