signup form and all the crap associated with it

--- a/src/app/components/navigation/navi.component.html
+++ b/src/app/components/navigation/navi.component.html
@@ -3,7 +3,10 @@
         <h1>Petition</h1>
         <ul class="menu">
             <li class="menu__item">
-                <a  routerLink='/'>Home</a>
+                <a routerLink='/'>Home</a>
+            </li>
+            <li class="menu__item">
+                <a routerLink='/signup'>Signup</a>
             </li>
             <li class="menu__item"> 
                 <a routerLink="/about">About Petition</a>
