petition background text

--- a/src/app/components/petitionbackgroundlist/petitionbackground.html
+++ b/src/app/components/petitionbackgroundlist/petitionbackground.html
@@ -1,8 +1,10 @@
 <section class="l-app-background"> 
-    <div class="petition-name" *ngFor="let name of names">
+    <div class="petition-name" *ngFor="let post of posts">
         <p class="petition-name__text">
-           &middot; {{name}}
+           &middot; {{post.email}}
         </p>
     </div>
 </section>
+
+
 
