added example page

--- a/src/app/components/navigation/navi.component.html
+++ b/src/app/components/navigation/navi.component.html
@@ -6,6 +6,9 @@
                 <a routerLink='/'>Home</a>
             </li>
             <li class="menu__item">
+                <a routerLink='/create'>Create Form</a>
+            </li>
+            <li class="menu__item">
                 <a routerLink='/signup'>Signup</a>
             </li>
             <li class="menu__item"> 
