--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto:400,700");
-@import url('https://fonts.googleapis.com/css?family=Great+Vibes');
-@import url('https://fonts.googleapis.com/css?family=Oswald');
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -532,7 +530,7 @@ li {
 	display: -ms-flexbox;
 	display: flex;
 	margin-top: 0;
-	width: 300px;
+	width: 600px;
 	height: inherit;
 	background: white;
 }
@@ -594,7 +592,7 @@ r
 	width: 60%;
 	background: #ffffff;
 	border-radius: 2px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .petition-form__set, .signup-form__set {
@@ -633,45 +631,350 @@ r
 	background: #90EE90;
 }
 
-.petition-live-demo{
-	position: relative;
-	border-radius: 15px;
-	width: 800px;
-	/*height: 500px;*/
-	margin-top: 700px;
-	margin-left: 550px;
-	background: white;
+.is-animated {
+	opacity: 0;
 }
 
-#demo{
-	position: relative;	
-	background: linear-gradient(to left, #ddd, #fff,  #ddd);
-	border-radius: 15px;
+.is-animated:nth-child(1) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 1s;
+	        animation-delay: 1s;
 }
 
-#demo h1, #demo h2{
-	font-family: 'Great Vibes', cursive;
+.is-animated:nth-child(2) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 2s;
+	        animation-delay: 2s;
 }
 
-#demo h2, #demo p{
-	text-align: left;
-}
-#demo h1{
-	text-align: center;
-	color: black;
-	padding-top: 20px;
-	font-size: 50px;
-}
-
-#demo h2{
-	padding: 0 0 20px 20px;
-	border-bottom: black solid
+.is-animated:nth-child(3) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 3s;
+	        animation-delay: 3s;
 }
 
-#demo p{
-	font-size: 20px;
-	padding: 0 20px;
-	font-family: 'Oswald', sans-serif;
+.is-animated:nth-child(4) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 4s;
+	        animation-delay: 4s;
+}
+
+.is-animated:nth-child(5) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 5s;
+	        animation-delay: 5s;
+}
+
+.is-animated:nth-child(6) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 6s;
+	        animation-delay: 6s;
+}
+
+.is-animated:nth-child(7) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 7s;
+	        animation-delay: 7s;
+}
+
+.is-animated:nth-child(8) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 8s;
+	        animation-delay: 8s;
+}
+
+.is-animated:nth-child(9) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 9s;
+	        animation-delay: 9s;
+}
+
+.is-animated:nth-child(10) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 10s;
+	        animation-delay: 10s;
+}
+
+.is-animated:nth-child(11) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 11s;
+	        animation-delay: 11s;
+}
+
+.is-animated:nth-child(12) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 12s;
+	        animation-delay: 12s;
+}
+
+.is-animated:nth-child(13) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 13s;
+	        animation-delay: 13s;
+}
+
+.is-animated:nth-child(14) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 14s;
+	        animation-delay: 14s;
+}
+
+.is-animated:nth-child(15) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 15s;
+	        animation-delay: 15s;
+}
+
+.is-animated:nth-child(16) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 16s;
+	        animation-delay: 16s;
+}
+
+.is-animated:nth-child(17) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 17s;
+	        animation-delay: 17s;
+}
+
+.is-animated:nth-child(18) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 18s;
+	        animation-delay: 18s;
+}
+
+.is-animated:nth-child(19) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 19s;
+	        animation-delay: 19s;
+}
+
+.is-animated:nth-child(20) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 20s;
+	        animation-delay: 20s;
+}
+
+.is-animated:nth-child(21) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 21s;
+	        animation-delay: 21s;
+}
+
+.is-animated:nth-child(22) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 22s;
+	        animation-delay: 22s;
+}
+
+.is-animated:nth-child(23) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 23s;
+	        animation-delay: 23s;
+}
+
+.is-animated:nth-child(24) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 24s;
+	        animation-delay: 24s;
+}
+
+.is-animated:nth-child(25) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 25s;
+	        animation-delay: 25s;
+}
+
+.is-animated:nth-child(26) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 26s;
+	        animation-delay: 26s;
+}
+
+.is-animated:nth-child(27) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 27s;
+	        animation-delay: 27s;
+}
+
+.is-animated:nth-child(28) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 28s;
+	        animation-delay: 28s;
+}
+
+.is-animated:nth-child(29) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 29s;
+	        animation-delay: 29s;
+}
+
+.is-animated:nth-child(30) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 30s;
+	        animation-delay: 30s;
+}
+
+.is-animated:nth-child(31) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 31s;
+	        animation-delay: 31s;
+}
+
+.is-animated:nth-child(32) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 32s;
+	        animation-delay: 32s;
+}
+
+.is-animated:nth-child(33) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 33s;
+	        animation-delay: 33s;
+}
+
+.is-animated:nth-child(34) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 34s;
+	        animation-delay: 34s;
+}
+
+.is-animated:nth-child(35) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 35s;
+	        animation-delay: 35s;
+}
+
+.is-animated:nth-child(36) {
+	-webkit-animation: clear ease-out forwards;
+	        animation: clear ease-out forwards;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 36s;
+	        animation-delay: 36s;
+}
+
+@-webkit-keyframes clear {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes clear {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 /*# sourceMappingURL=src/sass/maps/styles.css.map */
